--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ gunicorn==22.0.0
 python-dotenv==1.0.1
 APScheduler==3.10.4
 SQLAlchemy==2.0.32
-psycopg2-binary==2.9.9
+psycopg[binary]==3.1.19
 requests==2.32.3
 pytz==2024.1
